[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/block_particles.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/background.png" type="Texture" id=3]
[ext_resource path="res://icons/icon_mdpi.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/munro_60.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/fonts/munro_small_30.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/fonts/munro-narrow.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]

size = 10
use_mipmaps = false
use_filter = false
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="StartMenu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Visibility" ]

[node name="Patricles" parent="." index="0" instance=ExtResource( 2 )]

layer = 0

[node name="BackgroundLayer" type="CanvasLayer" parent="." index="1"]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Background" type="Sprite" parent="BackgroundLayer" index="0"]

modulate = Color( 0.332031, 0.332031, 0.332031, 1 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 360, 240 )
_sections_unfolded = [ "Offset", "Region", "Transform", "Visibility" ]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="2"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Elements" type="VBoxContainer" parent="CanvasLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Elements" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 328.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 22
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Logo" type="TextureRect" parent="CanvasLayer/Elements/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 48.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 4
_sections_unfolded = [ "Mouse", "Size Flags" ]

[node name="Text" type="Label" parent="CanvasLayer/Elements/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_right = 256.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.597656, 0.597656, 0.597656, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "TetrOut"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Size Flags", "custom_constants", "custom_fonts" ]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Elements" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 72.0
margin_right = 72.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_constants/separation = 5
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="Start" type="Button" parent="CanvasLayer/Elements/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 10.0
margin_right = 72.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.921875, 1, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play"
flat = true
align = 0
_sections_unfolded = [ "Anchor", "Rect", "Size Flags", "custom_fonts" ]

[node name="Exit" type="Button" parent="CanvasLayer/Elements/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_right = 72.0
margin_bottom = 97.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit"
flat = true
align = 0
_sections_unfolded = [ "Margin", "Rect", "Size Flags", "custom_colors", "custom_fonts" ]

[node name="Credits" type="Label" parent="CanvasLayer/Elements" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 184.0
margin_right = 328.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_constants/line_spacing = -2
text = "A game made for the annual game jam \"Github GameOff\" in 2018
Contributors: Max Schoenleben, Jonas Letterer, Moritz Podlech and Florian Winkler."
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_constants", "custom_fonts" ]

[connection signal="pressed" from="CanvasLayer/Elements/VBoxContainer/Start" to="." method="_on_Start_pressed"]

[connection signal="pressed" from="CanvasLayer/Elements/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]


